--- a/style.css
+++ b/style.css
@@ -2,16 +2,34 @@
 
 body{
   font-family: "Lato", sans-serif;
+  margin: 0;
+  padding:0;
 }
 
 .mainContainer{
-  display: grid;
   grid-row-gap: 2vh;
-  padding: 1vh 1vw 1vh 1vw;
-
+  display:grid;
+  padding: 6vh 2vw 1vh 1vw;
 }
 
-.row1{
+
+.navbar{
+  display:grid;
+  grid-template-columns: 50vw 50vw;
+  height:6vh;
+}
+.realleft a{
+    color:black;
+    float:left;
+}
+
+.right a {
+  color:black;
+}
+
+
+
+#row1{
   height:80vh;
   background-image: url("b1.jpg");
   background-repeat: no-repeat;
@@ -20,14 +38,25 @@ body{
   display:flex;
   justify-content: center;
   align-items: center;
-
 }
 
-.title{
+#title{
   display:flex;
   color:white;
   font-size:2vw;
   font-weight:500;
+
+}
+
+#title:hover{
+  color:black;
+  background-color: #D3D3D3;
+  transition:1s;
+
+}
+
+#title:hover .man{
+  border: none;
 
 }
 
@@ -54,7 +83,7 @@ body{
 
 .row3{
   height:80vh;
-  background-image: url("b3.jpg");
+  background-image: url("imgs/portraits/b3.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -66,4 +95,42 @@ body{
 a{
   text-decoration: none;
   color:white;
+}
+
+
+.portraitContainer{
+  display:grid;
+  grid-template-rows: 5vh auto;
+}
+
+.imageContainer{
+  display: grid;
+  grid-template-columns: repeat(3, 3fr);
+  justify-items: center;
+  grid-row-gap: 3vh;
+  grid-column-gap:.5vw;
+  padding: 5vh 10vw 6vh 10vw;
+
+}
+
+img{
+  width:26vw;
+}
+
+
+a{
+  text-decoration: none;
+  color:white;
+}
+
+.portraitPage{
+  background-color: #eee;
+}
+
+.names{
+  height:10vh;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 8vh;
 }
