--- a/style.css
+++ b/style.css
@@ -9,15 +9,31 @@ body{
 .mainContainer{
   grid-row-gap: 2vh;
   display:grid;
-  padding: 6vh 2vw 1vh 1vw;
+  padding: 4vh 2vw 1vh 2vw;
 }
-
 
 .navbar{
-  display:grid;
-  grid-template-columns: 50vw 50vw;
-  height:6vh;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #eee;
+  padding: 3vh 2vw 0vh 3vw;
+  height: 8vh;
+  font-size: 1.1vw;
+  font-weight: 900;
 }
+
+.navbar2{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #eee;
+  padding: 3vh 2vw 0vh 3vw;
+  height: 8vh;
+  font-size: 1.1vw;
+  font-weight: 900;
+}
+
 .realleft a{
     color:black;
     float:left;
@@ -25,6 +41,7 @@ body{
 
 .right a {
   color:black;
+  padding: 1vw;
 }
 
 
@@ -133,4 +150,46 @@ a{
   align-items: center;
   justify-content: center;
   font-size: 8vh;
+}
+
+form{
+	margin-top: 50px;
+	transform: all 4s ease-in-out;
+	text-align: center;
+
+}
+
+.form-control {
+	width: 600px;
+	background: transparent;
+	border: none;
+	outline: none;
+	border-bottom: 1px solid gray;
+	color: black;
+	font-size: 20px;
+	margin-bottom: 16px;
+	font-family: 'Lato', sans-serif;
+
+}
+
+input {
+	height: 45px;
+}
+
+form .submit {
+	background: black;
+	border-color: transparent;
+	color: white;
+	font-size: 20px;
+	-webkit-transition: color 0.3s ease;
+    -moz-transition: color 0.3s ease;
+    -ms-transition: color 0.3s ease;
+    -o-transition: color 0.3s ease;
+    transition: color 0.3s ease;
+}
+
+
+
+form .submit:hover{
+	color: gray;
 }
