--- a/style.css
+++ b/style.css
@@ -225,29 +225,42 @@ form .submit:hover{
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  padding: 10vh 13vw 3vh 13vw;
-  overflow: hidden;
+  padding: 5vh 13vw 3vh 13vw;
+
 }
 
 #rightside{
-  height:30vh;
+  height:55vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url("back.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 #changing{
   font-size: 5.3vw;
-  color:#0000ff;
+  color:yellow;;
 
 }
 
 .leftside{
-  height: 30vh;
+  height: 50vh;
   display:flex;
   align-items:center;
   justify-content: center;
   font-size: 5vw;
   padding-right: 10vw;
 
+}
+
+.photo{
+  align-items: center;
+  display:flex;
+  justify-content: center;
+}
+
+.photo img{
+  width:30vw;
 }
